feat: added figures to hic modules

--- a/Modules/hic_feature_analyses/hic_feature_analyses.Rmd
+++ b/Modules/hic_feature_analyses/hic_feature_analyses.Rmd
@@ -1,10 +1,10 @@
 ---
 title: Analysing Hi-C matrices
 output: 
- github_document: 
-  default
- pdf_document: 
-  latex_engine: xelatex
+  github_document: 
+    default
+  pdf_document: 
+    latex_engine: xelatex
 ---
 
 <!-- hic_feature_analyses.md is generated from hic_feature_analyses.Rmd. Please edit that file -->
@@ -33,6 +33,12 @@ fanc expected -p \
   output/hic/binned/fanc_example_500kb.hic \
   architecture/expected/fanc_example_500kb_expected.txt
 ```
+
+<center>
+
+![](figures/hic_feature_analyses_figure_1.png)
+
+</center>
 
 The raw expected values are stored in fanc_example_500kb_expected.txt
 
@@ -78,6 +84,12 @@ fancplot \
   -vmin -2 -vmax 2
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_2.png)
+
+</center>
+
 (4) Which layers of genome folding do you see in this picture?
 
 # Practical 2: AB compartment analysis
@@ -106,13 +118,18 @@ fancplot \
   -vmin -0.75 -vmax 0.75 -c RdBu_r
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_3.png)
+
+</center>
 
 ## AB Eigenvector
 
 To translate this enhanced chess-like pattern into a 1-dimension bed file that captures the binary nature of the correlation we typically use a PCA decomposition and keep the first eigenvector to calculate compartments.
 The eigenvector of the correlation matrix is used to derive compartment type and strength for each matrix bin. Generally, regions with positive values are assigned the ‘A’, regions with negative values the ‘B’ compartment. 
 
-(3) To calculate the eigenvector in addition to the correlation matrix, simply add the -v <file_name> option to the previous command: 
+(3) To calculate the eigenvector in addition to the correlation matrix, simply add the -v \<file_name\> option to the previous command: 
 
 ```{r fancplot_ce, eval = FALSE}
 fanc compartments \
@@ -134,10 +151,16 @@ fancplot \
   -p line architecture/compartments/fanc_example_1mb.ev.txt
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_4.png)
+
+</center>
+
 NOTE: fanc compartments outputs the first eigenvector by default. In some cases (like organisms with non-acrosomal chromosomes) it might be useful to choose a different eigenvector (sometimes the first eigenvector identifies chromosomal arms rather than compartments). To change the eigenvector use the -i option, e.g. -i 2 to keep the second instead of the first correlation matrix eigenvector.
 (5) The sign of the eigenvector does not necessarily correspond well to the A or B compartment. Often, the eigenvector is “flipped” (inverted signs on its entries). Mathematically, if x is an eigenvector, so is -x. You can use external information to “orient” the eigenvector, so that it most likely corresponds to the active and inactive compartments. 
 
-Specifically, you can supply a FASTA file with the genomic sequence to fanc compartments using the -g <fasta_file> argument. This is generally a good idea: fanc compartments then calculates the average GC content of regions with positive and those with negative eigenvector entries. As GC content has previously been shown to correlate well with compartmentalisation, the eigenvector is oriented in such a way that negative entries correspond to ‘B’ (low GC content) and positive entries to ‘A’ (high GC content).
+Specifically, you can supply a FASTA file with the genomic sequence to fanc compartments using the -g \<fasta_file\> argument. This is generally a good idea: fanc compartments then calculates the average GC content of regions with positive and those with negative eigenvector entries. As GC content has previously been shown to correlate well with compartmentalisation, the eigenvector is oriented in such a way that negative entries correspond to ‘B’ (low GC content) and positive entries to ‘A’ (high GC content).
 
 ```{r fancplot_cgc, eval = FALSE}
 fanc compartments \
@@ -150,7 +173,7 @@ fanc compartments \
 
 Consecutive matrix bins with the same eigenvector sign are considered part of a “domain”. 
 
-(6) You can use the -d <domain_file> option to write the AB domains to a BED file:
+(6) You can use the -d \<domain_file\> option to write the AB domains to a BED file:
 
 ```{r fanc_cd, eval = FALSE}
 fanc compartments -g hg19_chr18_19.fa \
@@ -166,7 +189,7 @@ A useful way of displaying genome-wide changes at the compartment-level is to ca
 
 The compartmentalisation of a genome can be visualised in an enrichment profile plot. This will divide bins into percentiles using the associated eigenvector values, and then the average observed/expected (O/E) values of contacts in each pair of percentile bins is calculated and plotted.
 
-(6) Use the -e <plot_file> option to generate this plot. You can also use the -m <matrix_file> option to output the enrichment matrix values to file for further analysis.
+(6) Use the -e \<plot_file\> option to generate this plot. You can also use the -m \<matrix_file\> option to output the enrichment matrix values to file for further analysis.
 
 ```{r fancplot_cex, eval = FALSE}
 fanc compartments -g hg19_chr18_19.fa \
@@ -177,9 +200,21 @@ fanc compartments -g hg19_chr18_19.fa \
 
 This process will need to specify the .hic matrix to calculate the enrichment of the contacts over the expected values. It is also advised to use a FASTA genome file to correctly orient the compartments.
 
+<center>
+
+![](figures/hic_feature_analyses_figure_5.png)
+
+</center>
+
 (7) You can customise the enrichment analysis using additional parameters. By default, the percentiles for eigenvector binning are chosen at 20, 40, 60, 80, and 100. To choose a finer binning, for example, you can use -p 10 20 30 40 50 60 70 80 90 100. The “0” percentile is always added automatically. The eigenvector values are not necessarily centred around 0, which can lead to some unexpected enrichment plots. To force the central enrichment matrix bin to 0, and perform separate percentile calculations for values < 0 and >= 0, use the -s 0 option. Note, however, that this will lead to differences in the number of bins plotted on the left and right side of the matrix.
 
-(8)  Compartment stength as defined by Flyamer, Gassler, and Imakaev et. al 2017 (https://pubmed.ncbi.nlm.nih.gov/28355183) can be calculated using --compartment-strength <filename>. It is defined in their supplement as follows “[In a 5x5 compartment enrichment map, ] “to calculate the strength of compartment signal, we took the natural logarithm of the AA * BB / AB^2”.
+<center>
+
+![](figures/hic_feature_analyses_figure_6.png)
+
+</center>
+
+(8)  Compartment stength as defined by Flyamer, Gassler, and Imakaev et. al 2017 (https://pubmed.ncbi.nlm.nih.gov/28355183) can be calculated using --compartment-strength \<filename\>. It is defined in their supplement as follows “[In a 5x5 compartment enrichment map, ] “to calculate the strength of compartment signal, we took the natural logarithm of the AA * BB / AB^2”.
 
 
 # Practical 3: PCA Analysis
@@ -200,6 +235,12 @@ fanc pca -n "HindIII 100k" "HindIII 5M" \
      architecture/pca/lowc.pca
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_7.png)
+
+</center>
+
 By default, PCA is run on pixels across the whole genome. In the example above, we have restricted the analysis to chromosome 19 using the -r chr19 argument. -Z instructs fanc pca to use only non-zero matrix entries for the PCA - this can help mitigate the effect of very weak contacts on the variability. 
 
 Is run by default on the s most variable pixels in the Hi-C matrix. You can change which pixels get used for the PCA by changing --strategy fold-change to choose contacts with the largest fold-change or --strategy passthrough to make no prior selection of contacts. If you only want to include contacts up to (or above a) a certain distance, you can specify that distance using the --max-distance (or min-distance) option.
@@ -216,11 +257,23 @@ fancplot \
   -m 4000000 -vmin 0 -vmax 0.05
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_8.png)
+
+</center>
+
 FAN-C provides multiple “scores” that are designed to find the boundaries between domains.
 
 ## Insulation Score 
 
 The insulation score (Crane et al. 2015) adds up contacts in a sliding diamond window along the Hi-C matrix diagonal.
+
+<center>
+
+![](figures/hic_feature_analyses_figure_9.png)
+
+</center>
 
 Regions with low score are “insulating”, i.e. regions between domains. Regions with high scores are most likely found inside domains.
 
@@ -231,6 +284,12 @@ fanc insulation output/hic/binned/fanc_example_100kb.hic \
   architecture/domains/fanc_example_100kb.insulation \
   -w 1000000 1500000 2000000 2500000 3000000 3500000 4000000
 ```
+
+<center>
+
+![](figures/hic_feature_analyses_figure_10.png)
+
+</center>
 
 (2) We can easily plot all insulation scores at the same time using fancplot:
 
@@ -279,6 +338,12 @@ fancplot --width 6 \
   -l "1mb" "2mb"
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_11.png)
+
+</center>
+
 By default, insulation scores are normalised to the chromosomal average and then log-transformed. There are plenty of normalisation and imputation strategies for insulation index calculations. Please refer to our Normalisation help for further details.
 
 ## Insulating boundaries (TAD boundaries)
@@ -308,6 +373,12 @@ fancplot --width 6 \
   -l "1mb" \
   -p bar architecture/domains/fanc_example_100kb.insulation_boundaries_1mb.bed
 ```
+
+<center>
+
+![](figures/hic_feature_analyses_figure_12.png)
+
+</center>
 
 (7) As you can see, lower minima get higher scores. By default, fanc boundaries outputs all minima, but you may set a threshold using --min-score s to report only boundaries with scores greater than s.
 
@@ -344,6 +415,12 @@ fancplot \
   -p scores architecture/domains/fanc_example_100kb.directionality
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_13.png)
+
+</center>
+
 ## TAD calling
 
 FAN-C does not provide a TAD calling functionality itself as there are plenty of tools available that specialise on this topic. We ourselves have developed a tool to call TADs called TADtool with an interactive display for users to have the opportunity to decide on their parameters based on what looks appropriate visually. 
@@ -366,6 +443,12 @@ tadtool plot \
   chr12:31000000-33000000
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_14.png)
+
+</center>
+
 # Practical 5: Loop calling
 
 Loops frequently form between two genomic regions, and are visible in the Hi-C matrix as patches of increased contact intensity:
@@ -377,6 +460,12 @@ fancplot \
   -p triangular architecture/loops/rao2014.chr11_77400000_78600000.hic \
   -vmin 0.0 -vmax 0.05 -m 600000
 ```
+
+<center>
+
+![](figures/hic_feature_analyses_figure_15.png)
+
+</center>
 
 We can use fanc loops to call loops in Hi-C matrices using the HICCUPS algorithm (Rao and Huntley et al., 2014). Please refer to the original paper for details on the algorithm, specifically the different types of local neighbourhoods defined to make loop calling robust.
 
@@ -462,6 +551,12 @@ This can be done on paired coordinates such as those stored in BEDPE format, lik
 
 Here are examples of TAD and loop aggregate plots from our recent preprint (Kruse et al. (2019)):
 
+<center>
+
+![](figures/hic_feature_analyses_figure_16.png)
+
+</center>
+
 ## Aggregate over variable width regions
 
 By default, if you provide fanc aggregate with a list of regions, it will extract the square Hi-C sub-matrices along the diagonal for each region and interpolate them to match the width set by --pixels (90 by default). It will then calculate the average value for each pixel, which then form the aggregate matrix.
@@ -490,6 +585,11 @@ fanc aggregate output/hic/binned/fanc_example_100kb.hic \
 
 Important: For variable sized regions, make sure to use the observed/expected regions by -e flag. -e works very well with log2-transformed data (-l).
 
+<center>
+
+![](figures/hic_feature_analyses_figure_17.png)
+
+</center>
 
 (3) This still does not look like much of a TAD, but we can add a little more context by expanding the plotting region relative to the region size using -r:
 
@@ -501,6 +601,12 @@ fanc aggregate output/hic/binned/fanc_example_100kb.hic \
   -m architecture/aggregate/fanc_example_100kb_oe_large.agg.txt \
   -e -l -r 1.0
 ```
+
+<center>
+
+![](figures/hic_feature_analyses_figure_18.png)
+
+</center>
 
 That plot depicts a region that is 3x the size of the TAD located in its center and already looks like we would expect: High signal in the center, especially at the TAD corner, where the corner loops are typically located.
 
@@ -515,6 +621,11 @@ fanc aggregate output/hic/binned/fanc_example_100kb.hic \
   -e -r 1.0 --rescale --vmax 0.045
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_19.png)
+
+</center>
 
 (5) For both the log2(O/E) and rescaled versions of the aggregate matrices, there are pre-set flags you can use called --tads and –-tads-imakaev, respectively. The latter is named after the first author of the publication that first used rescaled aggregate matrices in this fashion (Flyamer, Gassler, and Imakaev et al., 2017). In the above example, you can simply run:
 
@@ -542,6 +653,12 @@ fanc aggregate \
   --vmin 0 --vmax 0.03
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_20.png)
+
+</center>
+
 (7) You can see the relatively faint “average boundary” in the centre of the plot. When using O/E and log2-transformed matrices, this becomes much more obvious:
 
 ```{r fanc_aoe, eval = FALSE}
@@ -566,6 +683,11 @@ fanc aggregate architecture/loops/rao2014.chr11_77400000_78600000.hic \
   --loops
 ```
 
+<center>
+
+![](figures/hic_feature_analyses_figure_21.png)
+
+</center>
 
 ## Disclaimer
 
